--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-animate": "1.3.0",
     "angular-route": "1.3.0",
     "firebase": "2.1.x",
-    "angularfire": "0.9.1"
+    "angularfire": "0.9.1",
+    "angular-markdown-directive": "~0.3.1",
+    "textAngular": "~1.3.6"
   },
   "devDependencies": {
     "angular-mocks": "1.3.0",
