--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "firebase": "2.1.x",
     "angularfire": "0.9.1",
     "angular-markdown-directive": "~0.3.1",
-    "textAngular": "~1.3.6"
+    "textAngular": "~1.3.6",
+    "underscore": "~1.7.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3.0",
